2020-03-05  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        style-checker: Add UAF to the list of security words to warn about.
        https://bugs.webkit.org/show_bug.cgi?id=208643

        Reviewed by Jonathan Bedard.

        UAF is a common acronym used for use after free.

        * Scripts/webkitpy/style/checkers/changelog.py:
        (ChangeLogChecker.check_for_unwanted_security_phrases):

2020-03-04  Basuke Suzuki  <basuke.suzuki@sony.com>

        [MSVC] Add .natvis support of WebKit types
        https://bugs.webkit.org/show_bug.cgi?id=193119

        Reviewed by Don Olmstead.

        To help the WebKit developer while debugging, this file defines how
        WebKit types are displayed in debugger of Visual Studio.
        Very limited set of WebKit types, but it changes the world.

        * VisualStudio/WebKit.natvis: Added.

2020-03-04  Wenson Hsieh  <wenson_hsieh@apple.com>

        Add system trace points around display list replay
        https://bugs.webkit.org/show_bug.cgi?id=208616

        Reviewed by Simon Fraser.

        Add a new "Display list replay" trace point.

        * Tracing/SystemTracePoints.plist:

2020-03-04  Alex Christensen  <achristensen@webkit.org>

        Call globalObjectIsAvailableForFrame before evaluating JavaScript in newly created worlds
        https://bugs.webkit.org/show_bug.cgi?id=208615
        <rdar://problem/59406743>

        Reviewed by Alex Christensen.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKitCocoa/ContentWorldPlugIn.mm: Added.
        (-[ContentWorldPlugIn webProcessPlugIn:didCreateBrowserContextController:]):
        (-[ContentWorldPlugIn webProcessPlugInBrowserContextController:globalObjectIsAvailableForFrame:inScriptWorld:]):
        * TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:
        (TEST):
        Also make a test written in bug 206310 actually run code.

2020-03-04  Aakash Jain  <aakash_jain@apple.com>
