@@ -1,3 +1,14 @@
+2020-03-05  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] ValidateCommiterAndReviewer should validate emails in case insensitive manner
+        https://bugs.webkit.org/show_bug.cgi?id=208645
+
+        Reviewed by Alexey Proskuryakov.
+
+        * BuildSlaveSupport/ews-build/steps.py:
+        (ValidateCommiterAndReviewer.load_contributors):
+        (ValidateCommiterAndReviewer.start):
+
 2020-03-05  Carlos Alberto Lopez Perez  <clopez@igalia.com>
 
         style-checker: Add UAF to the list of security words to warn about.
